# WorkScheduleBot

./: .gitignore  README.md  pyproject.toml
schedulebot/: bot.py  config.py  message.py  messages.py  models.py  settings.py  states.py
schedulebot/actions/: __init__.py  staff.py
schedulebot/database/: __init__.py  crud.py  db.py  db.sql
schedulebot/filters/: __init__.py  role.py  start_filter.py  test_filter.py
schedulebot/googledrive/: __init__.py  actions.py  credentials.py
schedulebot/handlers/: __init__.py  admin.py  client.py  debug.py  employee.py  helpers.py  keyboards.py  membership.py  moderator.py  start.py  superuser.py
schedulebot/keyboards/: __init__.py  kbmaker.py  keyboards.py
schedulebot/middlewares/: __init__.py  db.py  db_middleware.py  role.py  test_middleware.py
