[tool.poetry]
name = "schedulebot"
version = "0.1.0"
description = ""
authors = ["Serhii Deriuhin <deriuhins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {version = "^2.25.1"}
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
redis = "^4.5.4"
aiogoogle = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
